manifest/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-server
  namespace: default
  labels:
    app: petclinic-server
spec:
  selector:
    matchLabels:
      app: petclinic-server
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: petclinic-server
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - petclinic-server
                topologyKey: "kubernetes.io/hostname"
      terminationGracePeriodSeconds: 30
      containers:
        - image: tae2089/petclinic:2
          name: petclinic-server
          resources:
            limits:
              cpu: "250m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /manage/health
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /manage/health
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /logs
              name: logs
      volumes:
        - name: logs
          hostPath:
            path: /logs
            type: DirectoryOrCreate
