manifest/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
  namespace: default
spec:
  selector:
    app: petclinic-server
  type: ClusterIP
  ports:
    - name: petclinic
      protocol: TCP
      port: 8080
      targetPort: 8080
